Update and rename ecm.html to index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             We focus on blending electronics with computing, giving students hands-on experience
             in embedded systems, programming, robotics, and modern tech.
         </p>
-        <img src="C:\Users\Lenovo\OneDrive\Desktop\T1\3\1000_F_443656206_ZlDKZiJ9MkYtOFiJXj5AWZy3phrUYTPt.jpg" alt="ECM Department Image">
+        <img src="1000_F_443656206_ZlDKZiJ9MkYtOFiJXj5AWZy3phrUYTPt.jpg" alt="ECM Department Image">
     </section>
 
     <section id="labs">
